--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <table border="2" cellpadding="5" cellspacing="5" width="90%" bgcolor="#FFFFFF">
       <tr>
         <td align="center">
-          <font size="5" face="Times New Roman">TRUSTED BY HOMEOWNERS SINCE 1977!</font>
+          <font size="5" face="Times New Roman">TRUSTED BY EVANSVILLE SINCE 1971!</font>
         </td>
       </tr>
       <tr>
         <td align="center">
-          <button style="background-color: lime; font-size: 24px; font-family: 'Times New Roman'; padding: 10px; cursor: pointer;" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
-            <blink>NEGOTIATE OUR RATE!</blink>
+          <button style="background-color: lime; font-size: 30px; font-family: 'Times New Roman'; padding: 10px; cursor: pointer;" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
+            <blink>NEGOTIATE OUR RATE!?</blink>
           </button>
         </td>
       </tr>
@@ -70,7 +70,7 @@
       </tr>
     </table>
     <br>
-    <font size="2">Copyright © 1977 Comfort Homes - All Rights Reserved</font>
+    <font size="2">Copyright © 1971 Comfort Homes - All Rights Reserved</font>
     <br>
     <table cellpadding="5">
       <tr>
