--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
           <a href="https://saycomfort.com/" target="_blank">
             <font color="#FF0000" size="3" face="Times New Roman"><u>Say Comfort</u></font>
           </a>
+           |
+          <a href="https://richtoymedia.com/" target="_blank">
+            <font color="#FF0000" size="3" face="Times New Roman"><u>Get Your Retro Site</u></font>
+          </a>
         </td>
       </tr>
     </table>
