--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </a>
           |
           <a href="https://saycomfort.com/" target="_blank">
-            <font color="#FF0000" size="3" face="Times New Roman"><u>Say Comfort</u></font>
+            <font color="#FF0000" size="3" face="Times New Roman"><u>Comfort Homes</u></font>
           </a>
            |
           <a href="https://richtoymedia.com/" target="_blank">
